<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/startDartGame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cut_card_background">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/menu_headLine"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/textView"
        android:layout_margin="20dp"
        android:layout_marginTop="20dp"
        android:columnCount="1"
        android:rowCount="3">

        <!-- Button Spiel Start -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardStartGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_play"></ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_button_startGame"
                    android:textColor="@color/black"
                    android:textSize="16sp"></TextView>

                <TextView
                    android:id="@+id/gameSettingsAdvice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/field_gameSettingsNeeded"
                    android:textColor="@color/red"
                    android:textSize="16sp"></TextView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Button Spieleinstellung-->
        <androidx.cardview.widget.CardView
            android:id="@+id/gameSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_settings"></ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_button_gameSettingsStart"
                    android:textColor="@color/black"
                    android:textSize="16sp"></TextView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!--Button Spiel beenden -->


    </GridLayout>


    <!--    <Button
        android:id="@+id/menu_finish_button"
        android:layout_width="231dp"
        android:layout_height="52dp"
        android:layout_marginStart="87dp"
        android:layout_marginTop="598dp"
        android:layout_marginEnd="93dp"
        android:layout_marginBottom="81dp"
        android:text="@string/menu_button_finish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="234dp"
        android:layout_height="45dp"
        android:layout_marginStart="87dp"
        android:layout_marginTop="429dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="257dp"
        android:text="@string/menu_button_startGame"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/kaliProgStart"
        android:layout_width="231dp"
        android:layout_height="52dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="515dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="169dp"
        android:text="@string/menu_button_kaliStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/headLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="91dp"
        android:layout_marginBottom="529dp"
        android:text="@string/menu_headLine"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/menu_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="175dp"
        android:layout_marginTop="243dp"
        android:layout_marginEnd="194dp"
        android:layout_marginBottom="464dp"
        android:text="@string/menu_version"
        android:textColor="#F4F4F4"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/kalibAdvice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="166dp"
        android:layout_marginTop="404dp"
        android:layout_marginEnd="187dp"
        android:layout_marginBottom="308dp"
        android:text="@string/field_calibrationNeeded"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
-->
</RelativeLayout>